fixing index banners to wrap and not overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,8 @@ h6 {
   color: rgba(255, 255, 255, 0.5);
   margin-top: 0px;
   margin-bottom: 0px;
-  height: 100px;
+  min-height: 160px;
+  max-height: 100%;
 }
 
 .bigbox2 > h1 {
@@ -131,7 +132,9 @@ h6 {
   font-size: 32px;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 0px;
-  margin-bottom: 0px
+  margin-bottom: 0px;
+  min-height: 130px;
+
 
 }
 .bigbox3 > h1 {
@@ -140,7 +143,9 @@ h6 {
   font-size: 64px;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 0px;
-  margin-bottom: 0px
+  margin-bottom: 0px;
+  height: 100%;
+  min-height: 100px;
 }
 .bigbox4 >h1 {
   width: 100%;
@@ -148,5 +153,6 @@ h6 {
   font-size: 16px;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 0px;
-  margin-bottom: 0px
+  min-height: 80px;
+  height: 100%;
 }
